[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghcc"
version = "0.0.2"
authors = [
  { name="Graphity" },
]
description = "Scrape GitHub Contributions Calendar"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"requests",
	"beautifulsoup4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Graphity/ghcc"
"Bug Tracker" = "https://github.com/Graphity/dontbs/ghcc"
